--- a/web/package.json
+++ b/web/package.json
@@ -25,7 +25,6 @@
     }
   },
   "scripts": {
-    "heroku-postbuild": "node gcp-setup.js",
     "start": "node app.js"
   },
   "dependencies": {
@@ -47,9 +46,9 @@
     "sinon": "^7.0.0"
   },
   "bugs": {
-    "url": "https://github.com/dwn/malkachi"
+    "url": "https://github.com/dwn/game"
   },
-  "homepage": "https://github.com/dwn/malkachi",
+  "homepage": "https://github.com/dwn/game",
   "directories": {
     "lib": "lib"
   },
