--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "malkachi-game",
-  "version": "0.1.0",
+  "version": "",
   "scripts": {
-    "postinstall": "npm install --prefix web"
+    "postinstall": "npm install --prefix web",
+    "start": "npm start --prefix web"
   }
 }
