--- a/web/package.json
+++ b/web/package.json
@@ -28,7 +28,7 @@
     "start": "node app.js"
   },
   "dependencies": {
-    "@google-cloud/datastore": "^3.1.0",
+    "@google-cloud/storage": "^5.7.2",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
     "lodash": "^4.17.11",
@@ -37,7 +37,9 @@
     "path": "^0.12.7",
     "prompt": "^1.0.0",
     "pug": "^2.0.3",
-    "uglify-js": "^3.4.9"
+    "socket.io": "^3.1.0",
+    "uglify-js": "^3.4.9",
+    "ulid": "^2.3.0"
   },
   "devDependencies": {
     "@google-cloud/nodejs-repo-tools": "^3.0.0",
@@ -52,5 +54,5 @@
   "directories": {
     "lib": "lib"
   },
-  "version": "0.1.417ef8e"
+  "version": "0.1.42af59d"
 }
