--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "path": "^0.12.7",
     "prompt": "^1.0.0",
     "pug": "^2.0.3",
+    "request": "^2.88.2",
     "socket.io": "^3.1.0",
     "uglify-js": "^3.4.9",
     "ulid": "^2.3.0"
@@ -54,5 +55,5 @@
   "directories": {
     "lib": "lib"
   },
-  "version": "0.1.48b6d44"
+  "version": "0.1.5a7fd73"
 }
